# llm_ops

./: .gitignore  README.md  constraints.txt  docker-compose.yaml  pyproject.toml
client/: docs_mcp_client.py
llm_ops/: __init__.py  config.py  embedders.py  mlflow_utils.py  prompt_templates.py  rag_chatbot.py  schemas.py  server.py  weaviate_client.py
llm_ops/agents/: rag_agent.py
llm_ops/ingest/: ingest_docs.py
llm_ops/llm/: gemma.py
llm_ops/utils/: google_ai_search.py  query_generator.py  vai_search_out copy.md  vai_search_out.md  vertex_ai_search.py  web_search.py
mlruns/0/: meta.yaml
mlruns/0/07256134f25c4ef1a5c2e933884eb0a4/: meta.yaml
mlruns/0/098ab1aacd584b79a227d35098c4d431/: meta.yaml
mlruns/0/0aedb96f8868466487f3bd36df8c8fa7/: meta.yaml
mlruns/0/0c7b80b307b54706a80a4c3745208265/: meta.yaml
mlruns/0/0e4735062d984ef3a2e4416b1aae734c/: meta.yaml
mlruns/0/1055ca3dffe74ea38ec778b7eb79bfaf/: meta.yaml
mlruns/0/131d3cdba2034f72a9953573e634ba9f/: meta.yaml
mlruns/0/164264bd843f4284bb84050188d789ef/: meta.yaml
mlruns/0/1848ef516a394758bb992e44593c431c/: meta.yaml
mlruns/0/18d59307d1734aa086038479728fa2ba/: meta.yaml
mlruns/0/18f43221a24a4379b66a7b6e02e4f3ac/: meta.yaml
mlruns/0/1a286dae4c304f848f5faf301a95f001/: meta.yaml
mlruns/0/1a674d0e89d34420b0f2fdec1d061951/: meta.yaml
mlruns/0/1c8c1bbe48b147319de602a7391935cb/: meta.yaml
mlruns/0/1eea3ecb23a74db88a17b782427b9fdf/: meta.yaml
mlruns/0/208bfb8a0cf045478c03f61d8fef7e0b/: meta.yaml
mlruns/0/2105acc0984e4b90914fbf3ec419f489/: meta.yaml
tests/: test_end_to_end.py
(+766 files in other folders)
